--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,11 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "laravel/ui": "^3.2"
+        "laravel/ui": "^3.2",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.16",
+        "shuchkin/simplexlsx": "^0.8.21",
+        "sudiptpa/guid": "^1.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
@@ -22,7 +26,10 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpunit/phpunit": "^9.3.3",
+        "maatwebsite/excel": "^3.1",
+        "shuchkin/simplexlsx": "^0.8.21"
+        
     },
     "config": {
         "optimize-autoloader": true,
