--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,35 +1,37 @@
-# This is an example Starter pipeline configuration
-# Use a skeleton to build, test and deploy using manual and parallel steps
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
-image: php-fpm
+# Template PHP Build
+
+# This template allows you to validate your PHP application.
+# The workflow allows running tests and code linting on the default branch.
+
+image: composer:2.0
 
 
 pipelines:
   default:
     - parallel:
-      - step:
-          name: 'Build and Test'
-          script:
-            - echo "Your build and test goes here..."
-      - step:
-          name: 'Lint'
-          script:
-            - echo "Your linting goes here..."
-      - step:
-          name: 'Security scan'
-          script:
-            - echo "Your security scan goes here..."
-
-    # The following deployment steps will be executed for each pipeline run. To configure your steps and conditionally deploy see https://support.atlassian.com/bitbucket-cloud/docs/configure-bitbucket-pipelinesyml/
-    - step:
-        name: 'Deployment to Staging'
-        deployment: staging
-        script:
-          - echo "Your deployment to staging script goes here..."
-    - step:
-        name: 'Deployment to Production'
-        deployment: production
-        trigger: 'manual'
-        script:
-          - echo "Your deployment to production script goes here..."
+        - step:
+            name: Test
+            script:
+              - composer install
+              -  ./vendor/bin/phpunit test
+            caches:
+              - composer
+        - step:
+            name: Lint
+            script:
+              - composer install
+              - ./vendor/bin/phplint . --exclude=vendor
+            caches:
+              - composer
+              
+        - step:
+            name: 'Deployment to Staging'
+            deployment: staging
+            script:
+            - echo "Your deployment to staging script goes here..."
+        - step:
+            name: 'Deployment to Production'
+            deployment: production
+            trigger: 'manual'
+            script:
+            - echo "Your deployment to production script goes here...
