bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,7 +23,7 @@ pipelines:
               - ./vendor/bin/phplint . --exclude=vendor
             caches:
               - composer
-              
+    - parallel:           
         - step:
             name: 'Deployment to Staging'
             deployment: staging
