bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,6 +10,11 @@ pipelines:
   default:
     - parallel:
         - step:
+            name: update 
+            script: 
+            - composer update
+           
+        - step:
             name: Test
             script:
               - composer install
