bitbucket-pipelines.yml edited online with Bitbucket

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,6 +15,7 @@ pipelines:
             name: Test
             script:
               - composer install
+              - composer update
               -  ./vendor/phpunit/phpunit/phpunit
             caches:
               - composer
